--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ steps:
 - bash: |
     AZURE_STORAGE_CONNECTION_STRING=$(AZURE_STORAGE_CONNECTION_STRING) make download
     make import
-  displayName: 'Export bundle and upload to Azure Storage'
+  displayName: 'Download bundle from Azure Storage and import'
 
 - bash: |
     make install-imported
